# openhpsdr-zeus

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md  Directory.Build.props  README.md  Zeus.slnx  run.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-mobile-android.yml  build-mobile-ios.yml  build-native-libs.yml  build-test.yml  release.yml  zeus-agent.yml
.playwright-mcp/: page-2026-04-15T21-51-48-093Z.yml  page-2026-04-15T21-52-05-450Z.yml  page-2026-04-15T21-52-13-561Z.yml  page-2026-04-15T21-52-19-754Z.yml  page-2026-04-15T21-53-06-637Z.yml
Nereus.Contracts/: AlertFrame.cs  AudioFrame.cs  RadioCalibration.cs  TxMetersFrame.cs  WireFormat.cs
Nereus.Dsp/: DspEngineFactory.cs  Nereus.Dsp.csproj  TxStageMeters.cs
Nereus.Dsp/Wdsp/: NativeMethods.cs  WdspNativeLoader.cs
Nereus.Protocol1/: ControlFrame.cs  HpsdrEnums.cs  IProtocol1Client.cs  IRadioTransport.cs  ITxIqSource.cs  IqFrame.cs  N2adrBands.cs  Protocol1Client.cs
Nereus.Protocol1/Discovery/: RadioDiscoveryService.cs  ReplyParser.cs
Nereus.Server/: Nereus.Server.csproj  Program.cs  TxAudioIngestStartup.cs  TxService.cs  TxTuneDriver.cs
Zeus.Contracts/: AlertFrame.cs  AudioFrame.cs  BandPlanDtos.cs  BoardCapabilities.cs  DisplayFrame.cs  Dtos.cs  FilterFrame.cs  LogDtos.cs  MsgType.cs  PaTempFrame.cs  PsFeedbackFrame.cs  PsMetersFrame.cs  QrzDtos.cs  RadioCalibration.cs  RotctldDtos.cs  RxMeterFrame.cs  TciDtos.cs  TxMetersFrame.cs  TxMetersV2Frame.cs  VstHostEventFrame.cs  WireFormat.cs  WisdomStatusFrame.cs
Zeus.Desktop/: Program.cs  Zeus.Desktop.csproj
Zeus.Dsp/: DspEngineFactory.cs  IDspEngine.cs  PsStageMeters.cs  SyntheticDspEngine.cs  TxStageMeters.cs  Zeus.Dsp.csproj
Zeus.Dsp/Wdsp/: NativeMethods.cs  WdspDspEngine.cs  WdspNativeLoader.cs  WdspWisdomInitializer.cs
Zeus.PluginHost/: IPluginHost.cs  PluginHostManager.cs  README.md  ServiceCollectionExtensions.cs  Zeus.PluginHost.csproj
Zeus.PluginHost/Chain/: ChainSlot.cs  PluginParameter.cs
Zeus.PluginHost/Discovery/: BinaryHeaderSniffer.cs  DefaultPluginPaths.cs  IBinaryHeaderSniffer.cs  IPluginScanner.cs  PluginBitness.cs  PluginFormat.cs  PluginManifest.cs  PluginPlatform.cs  PluginScanner.cs  SniffResult.cs
Zeus.PluginHost/Ipc/: BlockFlags.cs  BlockHeader.cs  ControlChannel.cs  ControlMessages.cs  ShmRing.cs  Wakeup.cs
Zeus.PluginHost/Native/: SidecarLocator.cs  SidecarProcess.cs
Zeus.Protocol1/: AssemblyInfo.cs  ControlFrame.cs  HpsdrEnums.cs  IProtocol1Client.cs  IRadioTransport.cs  ITxIqSource.cs  IqFrame.cs  N2adrBands.cs  PacketParser.cs  Protocol1Client.cs  TestToneGenerator.cs  TxIqRing.cs  Zeus.Protocol1.csproj
Zeus.Protocol1/Discovery/: DiscoveredRadio.cs  HpsdrBoardKind.cs  IRadioDiscovery.cs  RadioDiscoveryService.cs  ReplyParser.cs
Zeus.Protocol2/: AssemblyInfo.cs  IqFrame.cs  Protocol2Client.cs  PsFeedbackFrame.cs
Zeus.Protocol2/Discovery/: DiscoveredRadio.cs  HpsdrBoardKind.cs  IRadioDiscovery.cs  RadioDiscoveryService.cs  ReplyParser.cs
Zeus.Server/: BandMemoryStore.cs  BandPlanService.cs  BandPlanStore.cs  BandUtils.cs  CredentialStore.cs  DspPipelineService.cs  DspSettingsStore.cs  FilterPresetStore.cs  LayoutStore.cs  LogService.cs  PaDefaults.cs  PaSettingsStore.cs  PreferredRadioStore.cs  Program.cs  PsAutoAttenuateService.cs  PsSettingsStore.cs  QrzService.cs  RadioDriveProfile.cs  RadioService.cs  RotctldService.cs  StreamingHub.cs  TciManagementService.cs  TciRuntimeState.cs  TciSettingsStore.cs  TxAudioIngest.cs  TxAudioIngestStartup.cs  TxMetersService.cs  TxService.cs  TxTuneDriver.cs  WisdomBootstrapService.cs  Zeus.Server.csproj  appsettings.json
Zeus.Server.Hosting/: BandMemoryStore.cs  BandPlanService.cs  BandPrefsStore.cs  BoardCapabilitiesTable.cs  BottomPinStore.cs  CapabilitiesService.cs  CwOffset.cs  DisplaySettingsStore.cs  DspPipelineService.cs  DspSettingsStore.cs  LanCertificate.cs  LayoutCollectionStore.cs  LayoutStore.cs  PaDefaults.cs  PaSettingsStore.cs  PreferredRadioStore.cs  PsAutoAttenuateService.cs  PsSettingsStore.cs  RadioCalibrations.cs  RadioDriveProfile.cs  RadioService.cs  StreamingHub.cs  TciConfigStore.cs  TxAudioIngest.cs  TxMetersService.cs  TxService.cs  VstChainStore.cs  VstHostHostedService.cs  VstHostRequests.cs  Zeus.Server.Hosting.csproj  ZeusEndpoints.cs  ZeusHost.cs  ZeusHostOptions.cs
Zeus.Server.Hosting/BandPlans/: IARU_R1.segments.json  IARU_R2.segments.json  IARU_R3.segments.json  US_FCC_EXTRA.segments.json  US_FCC_GENERAL.segments.json
Zeus.Server.Hosting/Tci/: TciHandshake.cs  TciServer.cs  TciSession.cs  TciStreamPayload.cs  TciTxAudioReceiver.cs
Zeus.Server/BandPlans/: EI.segments.json  G.segments.json  IARU_R1.segments.json  IARU_R2.segments.json  IARU_R3.segments.json  US_FCC_EXTRA.segments.json  US_FCC_GENERAL.segments.json  regions.json
Zeus.Server/Tci/: SpotManager.cs  TciHandshake.cs  TciOptions.cs  TciProtocol.cs  TciRateLimiter.cs  TciServer.cs  TciSession.cs  TciStreamPayload.cs
docs/: BOARD_OVERRIDE_IMPLEMENTATION.md  INSTALLATION.md  RELEASE.md  puresignal.hl2.md  tci-test-plan.md  tci.md
docs/designs/: radio-support-audit.md  radio-support-plan.md
docs/implementation/: puresignal-protocol1-hermes-lite.md
docs/lessons/: README.md  desktop-subprocess-management.md  dev-conventions.md  disconnection-troubleshooting.md  greyline-antimeridian-handling.md  hl2-drive-byte-quantization.md  hl2-drive-model.md  hl2-multi-rx.md  native-lib-requirements.md  wdsp-init-gotchas.md
installers/: create-linux-desktop-appimage.sh  create-linux-package.sh  create-macos-app.sh  create-macos-desktop-app.sh  zeus-desktop-windows.iss  zeus-windows-arm64.iss  zeus-windows-launcher.cmd  zeus-windows.iss
native/: README.md  build.sh
native/wdsp/: CMakeLists.txt  channel.c  wdsp_export.h
native/wdsp/stubs/: rnnoise.h  rnnr_stub.c  sbnr_stub.c  specbleach_adenoiser.h
nereus-web/: index.html  package-lock.json  vite.config.ts
zeus-mobile/: README.md
zeus-web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
(+353 files in other folders)
